<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_ModeControlBox" Id="{7ddd8f23-6d80-4096-b07f-1e70525896a4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC FB_ModeControlBox IMPLEMENTS I_Mode
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Auto" Id="{48682564-9766-49f3-bf8b-f40af20c1211}">
      <Declaration><![CDATA[METHOD Auto
VAR_INPUT
	bEnable	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
Outputs.fCylinderPosition := CraneSimulation.fPositionAutoMode;
Outputs.eMode := E_Mode.Auto; 
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Manual" Id="{1d156ece-8246-40d7-b076-905685867dca}">
      <Declaration><![CDATA[METHOD Manual
VAR_INPUT
	bEnable	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
Outputs.fCylinderPosition := HMI.fManualCylinderPositionReference;
Outputs.eMode := E_Mode.Manual;
END_IF ]]></ST>
      </Implementation>
    </Method>
    <Method Name="Off" Id="{6d2093be-f10c-4755-a701-cd935c7e21b0}">
      <Declaration><![CDATA[METHOD Off
VAR_INPUT
	bEnable	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
Outputs.fCylinderPosition := 0;
Outputs.eMode := E_Mode.Off; 
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ModeControlBox">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_ModeControlBox.Auto">
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_ModeControlBox.Manual">
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_ModeControlBox.Off">
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>