<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_ModeVisualization" Id="{aba72860-427f-470a-b1b3-598fcfedf8ac}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC FB_ModeVisualization IMPLEMENTS I_Mode
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Auto" Id="{442e6fe3-95a7-4986-95ba-a5445c158c12}">
      <Declaration><![CDATA[METHOD Auto
VAR_INPUT
	bEnable	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
HMI.fCylinderPosition := CraneSimulation.fPositionAutoMode;
HMI.eMode := E_Mode.Auto; 
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Manual" Id="{35b2c634-f3ec-4586-a759-6cb663b58e39}">
      <Declaration><![CDATA[METHOD Manual
VAR_INPUT
	bEnable	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
HMI.fCylinderPosition := HMI.fManualCylinderPositionReference;
HMI.eMode := E_Mode.Manual; 
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Off" Id="{8268ac46-d200-462b-ac0d-8adeeabf5eba}">
      <Declaration><![CDATA[METHOD Off
VAR_INPUT
	bEnable	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF bEnable THEN
HMI.fCylinderPosition := 0;
HMI.eMode := E_Mode.Off; 
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ModeVisualization">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_ModeVisualization.Auto">
      <LineId Id="9" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_ModeVisualization.Manual">
      <LineId Id="9" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_ModeVisualization.Off">
      <LineId Id="9" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>